add_library(USER_CODE INTERFACE)

file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/null.c)

add_executable(firmware
    ${CMAKE_CURRENT_BINARY_DIR}/null.c
)

target_link_libraries(firmware
    ${BUILD_LINK_PREFIX}
    $<TARGET_PROPERTY:USER_CODE,INTERFACE_LINK_LIBRARIES>
    $<TARGET_PROPERTY:ESP8266_SDK,INTERFACE_LINK_LIBRARIES>
    ${BUILD_LINK_SUFFIX}
)

set_target_properties(firmware PROPERTIES
    LINKER_LANGUAGE C
)

