add_library(ESP8266_SDK INTERFACE)

if (NOT DEFINED ESP8266_SDK_VARIANT OR ESP8266_SDK_VARIANT STREQUAL "")
    message(FATAL_ERROR "ESP8266_SDK_VARIANT has not been defined")
endif ()

if (NOT DEFINED ESP8266_SDK_VERSION OR ESP8266_SDK_VERSION STREQUAL "")
    message(FATAL_ERROR "ESP8266_SDK_VERSION has not been defined")
endif()

if (ESP8266_SDK_VARIANT MATCHES "RTOS")
    include(rtos-${ESP8266_SDK_VERSION}.cmake)
elseif (ESP8266_SDK_VARIANT MATCHES "NONOS")
    include(nonos-${ESP8266_SDK_VERSION}.cmake)
else()
    message(FATAL_ERROR "Unknown ESP8266_SDK_VARIANT given.")
endif()
